gatekeeper/networkpolicy/receiver.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prop-deployment
  namespace: default
spec:
  selector:
    matchLabels:
      app: prop
  replicas: 2 
  template:
    metadata:
      labels:
        app: prop
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: prop-svc
  namespace: default
spec:
  selector:
    app: prop
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
